force-app/main/default/objects/WO_Part__c/WO_Part__c.object-meta.xml
<CustomObject>
    <label>WO Part PO</label>
    <nameField>
        <displayFormat>WOPO-{000000}</displayFormat>
        <label>WO Part PO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO Part POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>