force-app/main/default/objects/WO_Part__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <label>Date Ordered</label>
    <type>DateTime</type>
</CustomField>