force-app/main/default/objects/WO_Part__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>