force-app/main/default/objects/WO_Part__c/fields/Delivery_Pick_up_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pick_up_Details__c</fullName>
    <label>Delivery/Pick up Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>