force-app/main/default/objects/WO_Part__c/fields/Earliest_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Delivery_Time__c</fullName>
    <label>Earliest Receiving Time</label>
    <type>DateTime</type>
</CustomField>