force-app/main/default/objects/WO_Part__c/fields/Estimated_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Price__c</fullName>
    <label>Estimated Total Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>