force-app/main/default/objects/WO_Part__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipName>WO_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>