force-app/main/default/objects/WO_Part__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>WO Parts</relationshipLabel>
    <relationshipName>WO_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>