force-app/main/default/objects/WO_Part__c/fields/Latest_Receiving_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Receiving_Time__c</fullName>
    <label>Latest Receiving Time</label>
    <type>DateTime</type>
</CustomField>