force-app/main/default/objects/WO_Part__c/fields/Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Details__c</fullName>
    <label>Order Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>