force-app/main/default/objects/WO_Part__c/fields/Ordering_Url__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Url__c</fullName>
    <label>Ordering Url</label>
    <type>Url</type>
</CustomField>