force-app/main/default/objects/WO_Part__c/fields/Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Needed__c</fullName>
    <label>Quantity Needed</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>