force-app/main/default/objects/WO_Part__c/fields/Supplier_Quote__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote__c</fullName>
    <label>Supplier Quote #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>