force-app/main/default/objects/WO_Part__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>TrackIT__Work_Order__c</referenceTo>
    <relationshipName>WO_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>